{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 116,
  "lineage": "303199f7-d5b1-8708-426d-3771143b3607",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_cluster_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936213193977:security-group/sg-0df7a55e99d81617b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0df7a55e99d81617b",
            "ingress": [],
            "name": "ddp-poc-app-sg",
            "name_prefix": null,
            "owner_id": "936213193977",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ddp-poc-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-becdedc4"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1223051750",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0df7a55e99d81617b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.app_cluster_sg"
          ]
        }
      ]
    }
  ]
}